# Pinball

./: CMakeLists.txt  README.md  builder.sh  main.cpp
inc/: .#odbijacz.hpp  Odbijacz.hpp  kulka.hpp  odbijacz.hpp  plansza.hpp
src/: kulka.cpp  odbijacz.cpp  plansza.cpp
